--- a/views/locations.handlebars
+++ b/views/locations.handlebars
@@ -85,24 +85,33 @@
         </tbody>
     </table>
 
-    <script>
-        $(document).ready(function () {
-            $('#locationsTable').DataTable({
-                "order": [[0, "desc"]],
-                "columnDefs": [
-                    { "type": "date", "targets": 0 } // Assuming the first column is the date
-                ],
-                dom: 'lrtipB',
-                buttons: [
-                    'csv'
-                ],
-                "lengthMenu": [
-                    [25, 50, 100, 200, -1],
-                    [25, 50, 100, 200, "All"]
-                ],
-                "pageLength": 50 // Set initial page length
-            });
+<script>
+    $(document).ready(function () {
+        $('#locationsTable').DataTable({
+            paging: true,
+            searching: true,
+            ordering: true,
+            "order": [[0, "desc"]],
+            "columnDefs": [
+                { "type": "date", "targets": 0 }
+            ],
+            dom: "<'row'<'col-sm-12 col-md-6'l><'col-sm-12 col-md-6'f>>" +
+                 "<'row'<'col-sm-12'tr>>" +
+                 "<'row'<'col-sm-12 col-md-5'i><'col-sm-12 col-md-7'p>>" + 'B',
+            buttons: [
+                'csv'
+            ],
+            "lengthMenu": [
+                [25, 50, 100, 200, -1],
+                [25, 50, 100, 200, "All"]
+            ],
+            "pageLength": 50,
+            classes: {
+                sLengthSelect: "form-control form-control-sm",
+                sFilterInput: "form-control form-control-sm"
+            }
         });
-    </script>
+    });
+</script>
 </body>
 </html>
